# qmobQML

./: CMakeLists.txt  CMakeLists.txt.user.b1f2fb0  PlayerGenerator.cpp  PlayerGenerator.h  main.cpp  main.qml
